@@ -6,7 +6,7 @@
 .\" notice and this notice are preserved.
 .\"
 .\" $Id$
-.TH ARP-SCAN 1 "December 10, 2007"
+.TH ARP-SCAN 1 "July 11, 2008"
 .\" Please adjust this date whenever revising the man page.
 .SH NAME
 arp-scan \- The ARP scanner
@@ -387,11 +387,9 @@ The default is normally sufficient.
 .TP
 .B --interface=<i> or -I <i>
 Use network interface <i>.
-If this option is not specified, the default is the
-value of the RMIF environment variable.  If RMIF is
-not defined, then arp-scan will search the system
-interface list for the lowest numbered, configured
-up interface (excluding loopback).
+If this option is not specified, arp-scan will search the
+system interface list for the lowest numbered,
+configured up interface (excluding loopback).
 The interface specified must support ARP.
 .TP
 .B --quiet or -q
